[package]
name = "flutterff-rs"
version = "2.0.0"
edition = "2021"
description = "Lightweight native Flutter web development launcher for Linux"
license = "MIT"

[dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
webkit2gtk = { version = "2.0", features = ["v2_38"] }
glib = "0.18"
regex = "1.10"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
strip = true